# usermanager

./: .dockerignore  .env.example  .gitignore  BUGS_FOUND.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: execute.py  health.py  internal.py  organizations.py  workflows.py
app/core/: __init__.py  config.py  limiter.py  rate_limiter.py  security.py
app/db/: supabase.py
app/middleware/: __init__.py  auth_middleware.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  database.py  n8n_client.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLERK_INTEGRATION.md  CODE_STRUCTURE.md  N8N.md  N8N_SETUP.md  README.md  SUPABASE.md  SUPABASE_SETUP.md  WORKFLOW_GUIDE.md
frontend/: .env.example  .gitignore  Dockerfile  next.config.js  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
supabase/migrations/: 01_initial_schema.sql  02_clerk_native_integration.sql  03_clerk_supabase_v2_integration.sql  03_clerk_third_party_auth.sql
tests/: __init__.py  conftest.py  integration_full_flow.py  local_test.py  test_health.py  test_schemas.py  test_security.py
