[project]
name = "n8n-orchestration-gateway"
version = "1.1.0"
description = "Production-ready hardened B2B orchestration gateway for n8n with FastAPI, Supabase, and Clerk authentication"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gateway Team", email = "team@gateway.example.com"}
]
keywords = ["fastapi", "n8n", "supabase", "orchestration", "api-gateway", "multi-tenant", "clerk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database - Supabase with Native Clerk Integration
    # UPGRADED: Latest supabase-py supports third-party auth providers
    "supabase>=2.11.0",
    
    # HTTP Client - UPGRADED for supabase compatibility
    "httpx>=0.28.0",
    
    # Authentication
    "clerk-backend-api>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    
    # Rate Limiting & Caching
    "slowapi>=0.1.9",
    "redis>=5.2.0",
    
    # Security
    "bleach>=6.2.0",
    
    # Async Utilities
    "python-multipart>=0.0.17",
    "asyncer>=0.0.8",
    
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert detected
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "ARG001"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning:pyiceberg.*"
]
